...
    android:layout_height="match_parent"
    tools:context=".TesterCanvas">


    <!-- This is a new version of the toolbar for a java implementation of the canvas -->
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/appbar_container2"
...
            android:orientation="horizontal"
            android:columnCount="4"
            android:alignmentMode="alignBounds"
            android:background="#AAAAAA">

            <ImageButton
                android:id="@+id/button_undo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/undo_icon"
                android:text="Undo" />

            <ImageButton
                android:id="@+id/button_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/color_picker_icon"
                android:text="Color Picker" />
...
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/brush_24"
                android:text="Stroke" />

            <ImageButton
                android:id="@+id/button_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/menu_icon"
                android:text="Stroke" />
...
                android:scaleType="centerInside"
                android:src="@drawable/eraser_vector"
                android:text="Undo"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_shape"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/shapes_vector"
                android:text="Stroke"
...
                android:layout_columnWeight="1"
                android:src="@drawable/eye_dropper_vector"
                android:text="Stroke"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/save_icon"
                android:text="Save"
...
                android:layout_columnWeight="1"
                android:src="@drawable/select_icon"
                android:text="Undo"
                android:visibility="gone"/> -->

            <ImageButton
                android:id="@+id/button_paintbucket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/paint_bucket_vector"
                android:text="Save"
                android:visibility="gone"/>

            <!--<ImageButton
                android:id="@+id/button_pen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/pen_vector"
                android:text="Stroke"
...
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:visibility="gone"
                android:text="Stroke"
                app:srcCompat="@drawable/ic_baseline_add_to_home_screen_24" />
            <ImageButton
                android:id="@+id/button_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/home_icon"
                android:text="Stroke"
...
