<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="20dp"
    android:scrollbarStyle="insideInset"
    tools:context=".MainActivity">


    <View
        android:id="@+id/colored_bar7"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:alpha="0.5"
        android:background="#C8C8C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colored_bar5" />


    <View
        android:id="@+id/colored_bar"
        android:layout_width="420dp"
        android:layout_height="28dp"
        android:alpha="0.0"
        android:background="@color/color_primaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <View
        android:id="@+id/colored_bar2"
        android:layout_width="420dp"
        android:layout_height="90dp"
        android:alpha="0.7"
        android:background="#C8C8C8"
        app:layout_constraintBottom_toTopOf="@+id/colored_bar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_container2" />

    <View
        android:id="@+id/colored_bar3"
        android:layout_width="420dp"
        android:layout_height="40dp"
        android:alpha="1"
        android:background="#AAAAAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colored_bar"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recent Documents"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/colored_bar3"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <View
        android:id="@+id/colored_bar6"
        android:layout_width="420dp"
        android:layout_height="2dp"
        android:background="#959595"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colored_bar"
        app:layout_constraintVertical_bias="0.181" />

    <View
        android:id="@+id/colored_bar5"
        android:layout_width="420dp"
        android:layout_height="2dp"
        android:background="#606060"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colored_bar"
        app:layout_constraintVertical_bias="0.235" />

    <View
        android:id="@+id/colored_bar4"
        android:layout_width="420dp"
        android:layout_height="3dp"
        android:background="#838383"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_container2" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/appbar_container2"
        android:name="com.example.teamdolphin.ToolbarFragment"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_toolbar"
        tools:layout_editor_absoluteX="-4dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="80dp"

        android:clickable="false"
        android:elevation="10dp"
        android:insetTop="6dp"
        android:scaleY="0.8"
        android:text="New"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:backgroundTint="#6C6C6C"
        app:cornerRadius="12dp"
        app:iconPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:drawableLeft="?attr/actionModeCopyDrawable"

        android:elevation="10dp"
        android:insetTop="6dp"
        android:text="New"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:backgroundTint="@color/color_green"
        app:cornerRadius="12dp"
        app:iconPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/colored_bar7">

        <GridView
            android:id="@+id/homepage_gridView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnWidth="200dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:listSelector="#00000000"
            android:numColumns="3"
            android:stretchMode="columnWidth" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>